test/preprocessor/invalid/duplicate-versions.glsl
#version 330
#version 330